@@ -58,6 +58,7 @@ urlpatterns = patterns('',
         (r'^robots.txt$', 'pulog.views.utils.robots_txt'),
         (r'^favicon.ico$', 'pulog.views.utils.favicon_view'),
         (r'^search/', 'pulog.views.utils.search'),
+        (r'^comments/$', 'pulog.views.comment.comment_list'),
         (r'^admin/(.*)', admin.site.root),
         (r'^static/(?P<path>.*)$', 'pulog.media_serve.serve', 
             {'document_root': settings.MEDIA_ROOT}),
